--- a/src/components/StundenplanView/Tag/Tag.css
+++ b/src/components/StundenplanView/Tag/Tag.css
@@ -12,8 +12,9 @@
   width: 40px;
   height: 40px;
 
+  display: inline-block;
   position: relative;
-  margin: 100px auto;
+  margin: 40% 48%;
 }
 
 .double-bounce1, .double-bounce2 {
